@@ -6,5 +6,9 @@
       <li>Mozilla/Firefox</li>
     </ul><p> We are looking into or planning on adding support for the following: </p><ul class="left">
       <li>OpenOffice.org</li>
-    </ul></div><div id="copyright"></div></div></body>
+    </ul><h3>More documentation</h3><p> Contributed documentation is welcome:
+    <ul class="left">
+      <li>Documentation <a href="http://rd.cri74.org/index.php?2005/05/10/11-documentation-sur-sabayon">in French</a> by Philippe Tonguet.</li>
+    </ul>
+    </p></div><div id="copyright"></div></div></body>
 </html>
