@@ -1,3 +1,8 @@
+Tue May 10 16:11:10 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/flat.html doc/index.html: added a pointer to the documentation
+	  in french.
+
 2005-05-10  Sebastien Bacher  <seb128@debian.org>
 
 	* admin-tool/sabayon-xinitrc.sh.in: fix a syntax error.
